se agrega modulo negador

--- a/impl/pnr/essentials_gates.power.html
+++ b/impl/pnr/essentials_gates.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Mar  6 12:32:57 2024
+<td>Wed Mar  6 16:45:29 2024
 </td>
 </tr>
 <tr>
@@ -104,11 +104,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>16.682</td>
+<td>16.657</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>0.441</td>
+<td>0.466</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -196,23 +196,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>0.104</td>
+<td>0.109</td>
 <td>3.075</td>
-<td>3.815</td>
+<td>3.821</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.074</td>
+<td>0.078</td>
 <td>3.788</td>
-<td>9.654</td>
+<td>9.665</td>
 </tr>
 <tr>
 <td>VCCIO18</td>
 <td>1.800</td>
-<td>0.073</td>
-<td>1.957</td>
-<td>3.654</td>
+<td>0.078</td>
+<td>1.943</td>
+<td>3.637</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -232,9 +232,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>IO</td>
-<td>4.166
-<td>3.761
-<td>12.500
+<td>4.175
+<td>3.746
+<td>11.719
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -247,7 +247,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>decodificador</td>
 <td>0.035</td>
-<td>0.035(0.032)</td>
+<td>0.035(0.035)</td>
 <tr>
 <td>decodificador/b1/</td>
 <td>0.027</td>
@@ -256,6 +256,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>decodificador/cnta/</td>
 <td>0.005</td>
 <td>0.005(0.000)</td>
+<tr>
+<td>decodificador/n/</td>
+<td>0.002</td>
+<td>0.002(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -265,14 +269,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
+<td>pulso_conta</td>
+<td>50.000</td>
+<td>0.010</td>
+</tr>
+<tr>
 <td>clk</td>
 <td>50.000</td>
 <td>0.027</td>
-</tr>
-<tr>
-<td>pulso_conta</td>
-<td>50.000</td>
-<td>0.009</td>
 </tr>
 </table>
 </div><!-- content -->
