--- a/impl/gwsynthesis/essentials_gates_syn_resource.html
+++ b/impl/gwsynthesis/essentials_gates_syn_resource.html
@@ -32,7 +32,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">decodificador (C:/git programing projects/SysVerilog/essentials_gates/src/decoder.sv)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
-<td align = "center">18</td>
+<td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -50,7 +50,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (C:/git programing projects/SysVerilog/essentials_gates/src/decoder.sv)</td>
 <td align = "center">6</td>
 <td align = "center">5</td>
-<td align = "center">1</td>
+<td align = "center">2</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--n
+ (C:/git programing projects/SysVerilog/essentials_gates/src/decoder.sv)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">18</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
